Raise z-index of Mink UI to display properly on sites like TechCrunch. Fixes #131.

--- a/mink-plugin/css/minkui.css
+++ b/mink-plugin/css/minkui.css
@@ -1,5 +1,5 @@
 #minkWrapper {margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif;}
-#minkuiX {width: 100%; height: 80px; background-color: #eef; margin: 0; top: 0; left: 0; position: fixed; padding: 5px;  z-index:99999 !important; line-height: 1.1em;}
+#minkuiX {width: 100%; height: 80px; background-color: #eef; margin: 0; top: 0; left: 0; position: fixed; padding: 5px;  z-index:147483647 !important; line-height: 1.1em;}
 #minkuiX #minkLogo {height: 100%; float: left; z-index: 2; position: relative;}
 #minkuiX #minkStatus {width: 100%; position: absolute; bottom: 0; left: 0; margin: 0; padding: 0; background-color: #ccf; z-index: 1; height: 1.2em; border-bottom: 2px solid #aaf; border-top: 1px solid #bbf;}
 #minkuiX #minkStatus ul {list-style-type: none; margin: 0; padding: 0; width: 700px;}
